src/components/toolbar/components/alignment/editor.scss
.maxi-dropdown__alignment-content {
	.components-popover__content {
		width: 75px;
	}
	.maxi-alignment-control {
		.maxi-base-control__field {
			margin-bottom: 0;
			.maxi-tabs-control {
				display: block !important;
				margin-bottom: 0;
				&__button {
					display: block;
					align-items: flex-start;
				}
			}
		}
	}
}

